<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_alert"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/menu_alert"/>
    <item
        android:id="@+id/menu_arg"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/menu_arg"/>
    <item
        android:id="@+id/menu_produce"
        android:orderInCategory="25"
        android:showAsAction="never"
        android:title="@string/menu_produce"/>
    <item
        android:id="@+id/menu_machine"
        android:orderInCategory="27"
        android:showAsAction="never"
        android:title="@string/menu_machine"/>
    <item
        android:id="@+id/menu_user"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/menu_user"/>
	<item
        android:id="@+id/menu_log"
        android:orderInCategory="40"
        android:showAsAction="never"
        android:title="@string/menu_log"/>
	<item
        android:id="@+id/menu_camara"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/menu_camara"/>
	
</menu>